2010-05-11  Karel Klic  <kklic@redhat.com>

	* ftfont.c: Fix incorrect parentheses of #if condition for
	definining M17N_FLT_USE_NEW_FEATURE.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-04-30  Andreas Schwab  <schwab@linux-m68k.org>

	* composite.c (autocmp_chars): Save point as marker before calling
	auto-composition-function (Bug#5984).

	* lisp.h (restore_point_unwind): Add prototype.

	* fileio.c (restore_point_unwind): Remove static attribute.

2010-04-23  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (M17N_FLT_USE_NEW_FEATURE): Define it if we can use the
	new feature of libotf and m17n-flt.
	(ftfont_check_otf) [M17N_FLT_USE_NEW_FEATURE]: Call
	OTF_check_features even if no specific feature is given.
	(PACK_OTF_TAG) [M17N_FLT_USE_NEW_FEATURE]: New macro.
	(ftfont_drive_otf) [M17N_FLT_USE_NEW_FEATURE]: Handle the case
	that OUT is NULL.  Use OTF_drive_gsub_with_log and
	OTF_drive_gpos_with_log instead of OTF_drive_gsub and
	OTF_drive_gpos.
	(ftfont_try_otf) [M17N_FLT_USE_NEW_FEATURE]: New function.
	(ftfont_shape_by_flt) [M17N_FLT_USE_NEW_FEATURE]: Setup
	mflt_enable_new_feature and mflt_try_otf.

2010-04-19  Juanma Barranquero  <lekktu@gmail.com>

	* dired.c (Ffile_attributes): Fix typo in docstring.

2010-04-13  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsmenu.m (EmacsDialog-runDialogAt:): Declare ret as
	NSInteger (Bug#5811).

2010-04-10  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* s/darwin.h (PTY_ITERATION, PTY_NAME_SPRINTF, PTY_TTY_NAME_SPRINTF)
	(PTY_OPEN): New defines.  Use openpty (Bug#726, Bug#5819).

2010-04-08  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.h (FRAME_LINE_TO_PIXEL_Y): Add missing parenthesis.

2010-04-07  Jan Djärv  <jan.h.d@swipnet.se>

	* frame.h (FRAME_TEXT_LINES_TO_PIXEL_HEIGHT): Don't use
	FRAME_LINE_TO_PIXEL_Y.

	* xterm.c (x_set_window_size_1): Don't add border_width/height to
	pixelwidth/height.

2010-04-05  Chong Yidong  <cyd@stupidchicken.com>
